--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -100,5 +100,6 @@
 "dowWedShort": "Wed",
 "dowThuShort": "Thu",
 "dowFriShort": "Fri",
-"dowSatShort": "Sat"
+"dowSatShort": "Sat",
+"dateHeader": "yyyy-MM"
 }
