--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -99,5 +99,6 @@
 "dowWedShort": "수",
 "dowThuShort": "목",
 "dowFriShort": "금",
-"dowSatShort": "토"
+"dowSatShort": "토",
+"dateHeader": "yyyy년 MM월"
 }
