--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -101,5 +101,6 @@
 "dowThuShort": "Thu",
 "dowFriShort": "Fri",
 "dowSatShort": "Sat",
-"dateHeader": "yyyy-MM"
+"dateHeader": "yyyy-MM",
+"distance": "distance"
 }
