251109 add Project stat View

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -70,6 +70,7 @@
 "projectEdit": "Edit Project",
 "projectAddButton": "Add Project",
 "projectEditButton": "Update Project",
+"projectStatView": "View Project stat",
 "projectType": "Project Type",
 "projectTypeExercise": "Exercise",
 "projectTypeStudy": "Study",
