--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,10 +1,34 @@
 {
   "login": "Sign In",
+  "loginDescription" : "Please log in with\nyour registered ID.",
+
   "signup": "Sign Up",
+  "findAccount": "Find Account",
   "findId": "Find ID",
   "findPw": "Find PW",
+  "idInputHint": "Enter your ID here",
   "emailInputHint": "Enter your email here",
   "sendVerificationCode": "Send Code",
+  "findIdDescription": "Please enter the email you registered with.\nWe will send your ID to this email.",
+  "findPwDescription": "Please enter your ID and email.\nWe will send a temporary password to this email.",
+  
+  "emailLabel": "Email",
+  "idLabel": "ID",
+"idHint": "Enter your ID",
+"checkDuplicate": "Check",
+  "passwordLabel": "Password",
+  "passwordHint": "Enter your password",
+  "passwordConfirmLabel": "Confirm Password",
+  "passwordConfirmHint": "Re-enter your password",
+  "nicknameLabel": "Nickname",
+  "nicknameHint": "Enter your nickname",
+  "customDomain": "Custom Input",
+  "birthdayLabel": "Date of Birth",
+  "genderLabel": "Gender",
+  "genderMale": "Male",
+  "genderFemale": "Female",
+  "genderUndisclosed": "Undisclosed",
+
   "addSchedule": "Add Schedule",
   "linkEverytime": "Link Everytime",
 "navCalendar": "Calendar",
@@ -42,6 +66,12 @@
 "searchNoResults": "No results found",
 "searchTryAgain": "Please try again with a different name.",
 "desideLocation": "Deciding on this place",
+"scheduleTitleHint": "Enter schedule title",
+  "dateHint": "Select date",
+  "startTimeHint": "Start time",
+  "endTimeHint": "End time",
+  "notesHint": "Enter notes",
+  "selectLocationHint": "Enter or select location",
 "projectPageTitle": "Projects",
 "toggleMonth": "Month",
 "toggleWeek": "Week",
