--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -1,10 +1,35 @@
 {
   "login": "로그인",
+  "loginDescription" : "회원가입 시 입력하신 아이디로\n로그인해 주세요",
+
   "signup": "회원가입",
+  "findAccount": "계정 찾기",
   "findId": "아이디 찾기",
   "findPw": "비밀번호 찾기",
+  "idInputHint": "여기에 아이디 입력",
   "emailInputHint": "여기에 이메일 입력",
   "sendVerificationCode": "인증번호 발송",
+  "findIdDescription": "가입 시 등록한 이메일을 입력해 주세요.\n입력하신 이메일로 아이디를 전송해 드립니다.",
+  "findPwDescription": "가입한 아이디와 이메일을 입력해 주세요.\n이메일로 임시 비밀번호를 전송해 드립니다.",
+  
+  "emailLabel": "이메일",
+  "idLabel": "아이디",
+  "idHint": "여기에 아이디 입력",
+  "checkDuplicate": "중복확인",
+  "passwordLabel": "비밀번호",
+  "passwordHint": "여기에 비밀번호 입력",
+  "passwordConfirmLabel": "비밀번호 확인",
+  "passwordConfirmHint": "비밀번호 재입력",
+  "nicknameLabel": "닉네임",
+  "nicknameHint": "여기에 닉네임 입력",
+  "customDomain": "직접 입력",
+  "birthdayLabel": "생년월일",
+  "genderLabel": "성별",
+  "genderMale": "남자",
+  "genderFemale": "여자",
+  "genderUndisclosed": "미공개",
+
+
   "addSchedule": "일정 추가하기",
   "linkEverytime": "에브리타임 연동",
 "navCalendar": "캘린더",
@@ -42,6 +67,13 @@
 "searchNoResults": "검색 결과가 없습니다",
 "searchTryAgain": "다른 이름으로 다시 시도해주세요.",
 "desideLocation": "이 장소로 결정하기",
+"scheduleTitleHint": "일정 제목을 입력하세요",
+  "dateHint": "날짜 선택",
+  "startTimeHint": "시작 시간",
+  "endTimeHint": "종료 시간",
+  "notesHint": "메모를 입력하세요",
+  "selectLocationHint": "장소를 입력하거나 선택하세요",
+
 "projectPageTitle": "장기 프로젝트",
 "toggleMonth": "월",
 "toggleWeek": "주",
